# TMFQSfullstate

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  compile_flags.txt
benchmarks/: CMakeLists.txt  Makefile  benchmark_backends.cpp  benchmark_regression_check.cpp
cmake/: FindBlosc2.cmake  FindZFP.cmake  TMFQSConfig.cmake.in
examples/: CMakeLists.txt  Makefile  applyControlledNot.cpp  applyControlledPhaseShift.cpp  applyHadamard.cpp  experiment_compare.cpp  getSumOfProbabilities.cpp  grover.cpp  groverLazy.cpp  grover_cli.h  grover_normal.cpp  qft.cpp  qftG.cpp  test_bugfixes.cpp  zfp_error_analysis.cpp
include/: quantumAlgorithms.h  quantumGate.h  quantumRegister.h  stateSpace.h  tmfqsfs.h  types.h  utils.h  validation.h
include/storage/: GateBlockApply.h  IStateBackend.h  StateBackendFactory.h
include/tmfqs/algorithms/: algorithms.h  grover.h  operations.h  qft.h
include/tmfqs/circuit/: circuit.h
include/tmfqs/config/: register_config.h
include/tmfqs/core/: constants.h  math.h  random.h  state_space.h  types.h  validation.h
include/tmfqs/experiment/: comparison.h  report.h
include/tmfqs/gates/: quantum_gate.h
include/tmfqs/register/: quantum_register.h
include/tmfqs/sim/: simulator.h
include/tmfqs/state/: quantum_state.h
include/tmfqs/storage/: gate_block_apply.h  i_state_backend.h  state_backend_factory.h
include/tmfqs/storage/blosc/: blosc_codec.h  blosc_codec_policy.h  blosc_state_backend.h
include/tmfqs/storage/common/: backend_validation.h  chunk_cache.h  chunk_layout.h  compressed_backend_metrics.h  compressed_state_backend.h  dense_register_executor.h  gate_apply_engine.h  pair_kernel_executor.h
include/tmfqs/storage/dense/: dense_state_backend.h
include/tmfqs/storage/factory/: state_backend_factory.h  storage_strategy_registry.h
include/tmfqs/storage/zfp/: zfp_codec.h  zfp_codec_policy.h  zfp_state_backend.h
profiling/qft/pattern/q22/auto/: command.txt  metadata.txt  psrecord.stdout.txt  stdout.txt
profiling/qft/pattern/q22/blosc/: command.txt  legacy_migration.txt  metadata.txt  psrecord.stdout.txt  stdout.txt
profiling/qft/pattern/q22/dense/: command.txt  legacy_migration.txt  metadata.txt  psrecord.stdout.txt  stdout.txt
profiling/qft/pattern/q22/zfp/: command.txt  legacy_migration.txt  metadata.txt  psrecord.stdout.txt  stdout.txt
profiling/qft/pattern/q23/auto/: command.txt  metadata.txt  psrecord.stdout.txt  stdout.txt
profiling/qft/pattern/q23/blosc/: command.txt  legacy_migration.txt  metadata.txt  psrecord.stdout.txt  stdout.txt
profiling/qft/pattern/q23/dense/: command.txt  legacy_migration.txt  metadata.txt  psrecord.stdout.txt  stdout.txt
profiling/qft/pattern/q23/zfp/: command.txt  legacy_migration.txt  metadata.txt  psrecord.stdout.txt
profiling/qft/pattern/q24/auto/: command.txt  metadata.txt  psrecord.stdout.txt  stdout.txt
profiling/qft/pattern/q24/blosc/: command.txt  legacy_migration.txt  metadata.txt  psrecord.stdout.txt
results/thesis_experiments/manual-run/: combined.csv  errors.csv  manifest.json  runs.csv  summary.csv
results/thesis_experiments/manual-run/profiles/: q20_grover_lazy_multi_blosc.csv  q20_grover_lazy_multi_dense.csv  q20_grover_lazy_multi_zfp.csv  q20_grover_lazy_single_7n8_blosc.csv  q20_grover_lazy_single_7n8_zfp.csv  q20_grover_lazy_single_n2_blosc.csv  q20_grover_lazy_single_n2_dense.csv  q20_grover_lazy_single_n2_zfp.csv  q20_grover_lazy_single_n8_blosc.csv  q20_grover_lazy_single_n8_dense.csv  q20_grover_lazy_single_n8_zfp.csv  q20_grover_multi_blosc.csv  q20_grover_multi_dense.csv  q20_grover_multi_zfp.csv  q20_grover_single_7n8_blosc.csv  q20_grover_single_7n8_dense.csv  q20_grover_single_7n8_zfp.csv  q20_grover_single_n2_blosc.csv  q20_grover_single_n2_dense.csv  q20_grover_single_n2_zfp.csv  q20_grover_single_n8_blosc.csv  q20_grover_single_n8_dense.csv  q20_grover_single_n8_zfp.csv  q20_qft_high_entropy_blosc.csv  q20_qft_high_entropy_dense.csv  q20_qft_high_entropy_zfp.csv  q20_qft_pattern_blosc.csv  q20_qft_pattern_dense.csv  q20_qft_pattern_zfp.csv  q21_grover_lazy_multi_blosc.csv  q21_grover_lazy_multi_dense.csv  q21_grover_lazy_multi_zfp.csv  q21_grover_lazy_single_7n8_blosc.csv  q21_grover_lazy_single_7n8_dense.csv  q21_grover_lazy_single_7n8_zfp.csv  q21_grover_lazy_single_n2_blosc.csv  q21_grover_lazy_single_n2_dense.csv  q21_grover_lazy_single_n2_zfp.csv  q21_grover_lazy_single_n8_blosc.csv  q21_grover_lazy_single_n8_dense.csv  (+144 more)
scripts/: exec_after_stop.sh  plot_thesis_figures.py  plot_time_vs_memory.py  profile_experiments.sh  profile_grover_optimized.sh  run_thesis_experiments.py
src/: CMakeLists.txt  Makefile  quantumAlgorithms.cpp  quantumGate.cpp  quantumRegister.cpp  utils.cpp
src/storage/: BloscStateBackend.cpp  DenseStateBackend.cpp  StateBackendFactory.cpp
src/tmfqs/algorithms/: grover.cpp  operations.cpp  qft.cpp
src/tmfqs/circuit/: circuit.cpp
src/tmfqs/core/: math.cpp  random.cpp
src/tmfqs/experiment/: comparison.cpp  report.cpp
src/tmfqs/gates/: quantum_gate.cpp
src/tmfqs/register/: quantum_register.cpp
src/tmfqs/sim/: simulator.cpp
src/tmfqs/state/: quantum_state.cpp
src/tmfqs/storage/: BloscStateBackend.cpp  DenseStateBackend.cpp  StateBackendFactory.cpp  ZfpStateBackend.cpp  backend_common.h
src/tmfqs/storage/blosc/: blosc_codec.cpp  blosc_state_backend.cpp
src/tmfqs/storage/dense/: dense_state_backend.cpp
src/tmfqs/storage/factory/: state_backend_factory.cpp  storage_strategy_registry.cpp
src/tmfqs/storage/zfp/: zfp_codec.cpp  zfp_state_backend.cpp
tasks/: lessons.md  zfp_error_analysis_18_20.csv  zfp_error_analysis_18_20.md
tasks/zfp_error_runs_22_24/: q22.csv  q22.md  q23.csv  q23.md  q24.csv  q24.md
tests/: CMakeLists.txt  Makefile
tests/integration/: test_bugfixes.cpp
tests/integration/algorithms/: test_algorithms.cpp
tests/integration/circuit/: test_circuit.cpp
tests/integration/common/: test_helpers.h
tests/integration/register/: test_register_validation.cpp
tests/integration/storage/: test_storage_cache.cpp  test_storage_parity.cpp
(+307 files in other folders)
